atualição da index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Station | RocketSeat
+            Treino
         </title>
     </head>
     <body>
@@ -11,6 +11,6 @@
             <button>Adicionar</button>
         </div>
 
-        <script src="todos.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
